# Oliana-next

./: .gitignore  Cargo.toml  readme.md
Oliana-Images/: Cargo.toml
Oliana-Images/src/: main.rs
Oliana-Lib/: Cargo.toml
Oliana-Lib/src/: files.rs  lib.rs
Oliana-Server/: Cargo.toml
Oliana-Server/src/: lib.rs  oliana_client.rs  oliana_server.rs  oliana_server_lib.rs
Oliana-Text/: Cargo.toml
Oliana-Text/src/: main.rs
